<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gereonelvers.android.shguide.AboutFragment">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <TextView
                android:id="@+id/welcome_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_welcome"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/about_body_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome_tv"
                android:text="@string/about_text_body"/>
            <TextView
                android:id="@+id/about_github_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_body_tv"
                android:text="@string/about_github"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/fair_use_disclaimer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/about_github_tv"
                android:text="@string/fair_use"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/fair_use_disclaimer"
                android:layout_marginBottom="12dp"
                android:text="@string/support"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
